# Trabajo-Final-Modelo-Predictor-Fallas

./: README.md
dataset/: predictive_maintenance.csv
notebook/: TRABAJO_FINAL.ipynb
predictor-classifier-api/: requirements.txt
predictor-classifier-api/app/: __init__.py  config.py
predictor-classifier-api/app/bp_api/: __init__.py  models.py  resources.py  schemas.py
predictor-classifier-api/dependencies/: predictor_classifier-0.1-py3-none-any.whl
predictor-classifier-package/: MANIFEST.in  README.md  requirements.txt  setup.cfg  test.py
predictor-classifier-package/predictor_classifier/: __init__.py  classifier.py
predictor-classifier-package/predictor_classifier/ml-model/: model.pkl  scaler.pkl
