[metadata]
name = predictor_classifier
version = 0.1
author = Max laura
description = Paquete para determinar la falla en un motor de inducción
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
include_package_data = true
install_requires =
    pandas
    scikit-learn
    joblib
python_requires = >=3.7